# datasheet-for-dataset

./: .gitignore  .readthedocs.yaml  README.md  example.py  pyproject.toml  ruff.toml
.github/workflows/: build_and_publish.yml  test_and_lint.yml
dfd/: __init__.py  __main__.py  _common.py  api.py  cli.py  create.py  pyproject.toml  utils.py
dfd/dataset/: __init__.py  analyses.py  pandas_strategy.py  polars_strategy.py
dfd/datasheet/: __init__.py  compiler.py  layout.py  manager.py  structures.py  template.py
dfd/datasheet/templates/: automated_analysis.md  collection_process.md  composition.md  distribution.md  footer.md  header.md  maintenance.md  motivation.md  preprocessing.md  uses.md
docs/: conf.py  dfd.dataset.rst  dfd.datasheet.rst  dfd.rst  index.rst  modules.rst  requirements.txt
docs/architecture/: datasheet-class-diagram.drawio
examples/: example.py  example_workflow.py
tests/: test_create.py  test_dataset_analyses.py  test_datasheet_compiler.py
