[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfd"
version = "0.0.1"
dependencies = [
    "pandas",
    "numpy",
    "polars",
]
requires-python = ">= 3.10"
authors = [
  {name = "Pradyun Gedam", email = "pradyun@example.com"},
  {name = "Tzu-Ping Chung", email = "tzu-ping@example.com"},
  {name = "Another person"},
  {email = "different.person@example.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["spam", "eggs"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.hatch.envs.default]
dependencies = ["pytest"]


[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/me/spam.git"
