[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "datasheet-for-dataset"
version = "0.0.5"
dependencies = [
    "pandas",
    "numpy",
    "polars",
    "pydantic==2.11.5"
]
requires-python = ">= 3.10"
authors = [
  {name = "anwielts", email = "52626848+anwielts@users.noreply.github.com"},
  {name = "Flippchen", email = "91947480+flippchen@users.noreply.github.com"},
]

description = "A Python package for creating automated datasheets from different data sources."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["data", "datasheet", "dataset", "automation", "pandas", "polars"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --cov=dfd"
testpaths = ["tests"]

[project.scripts]
dfd = "dfd.cli:main"

[project.urls]
Homepage = "https://github.com/anwielts/datasheet-for-dataset"
Repository = "https://github.com/anwielts/datasheet-for-dataset"

[tool.uv.build-backend]
packages = ["dfd"]
module-name = "dfd"
module-root = ""

[project.optional-dependencies]
dev = [
    "ruff>=0.12.8",
    "pytest>=8.3",
    "pytest-cov",
    "pytest-xdist",
    "pandas-stubs",
]
